--- a/timestamps/20230317-01_あんなさん._TS.md
+++ b/timestamps/20230317-01_あんなさん._TS.md
@@ -23,5 +23,5 @@
 | 20 | オレンジ・エピソード | EmotionLight (MV 鑑賞) | 02:20:00 |
 | 21 | Like twinkling STARS | FantasticLight (MV 鑑賞) | 02:29:15 |
 | 22 | スペードのQ | SHADE OF SPADE (MV 鑑賞) [再] | 02:35:10 |
-| 23 |  |  |  |
+| 23 | 素敵なキセキ (MV 鑑賞) | (Various) | 02:54:45 |
 | 24 | スペードのQ | SHADE OF SPADE (MV 鑑賞) [再] | 03:03:45 |
