--- a/timestamps/20230524-01_あんなさん._TS.md
+++ b/timestamps/20230524-01_あんなさん._TS.md
@@ -2,9 +2,9 @@
 | No | 曲名 | アーティスト | タイムスタンプ |
 | --: | :-- | :-- | :-- |
 | 1 | スペードのQ | SHADE OF SPADE (MV 鑑賞) | 00:03:20 |
-| 2 |  |  |  |
-| 3 |  |  |  |
-| 4 |  |  |  |
+| 2 | ラスト・アクトレス (MV 鑑賞) | (Various) | 00:14:35 |
+| 3 | オーディナリィ・クローバー (MV 鑑賞) | (Various) | 00:29:50 |
+| 4 | ビッグバンズバリボー!!!!! (MV 鑑賞) | (Various) | 00:37:40 |
 | 5 | Shamrock Vivace | CLEVER CLOVER (MV 鑑賞) | 00:44:45 |
 | 6 | Brand New Theater! | 765 MILLION ALLSTARS (ライブ 2M) | 00:53:05 |
 | 7 | Brand New Theater! | 765 MILLION ALLSTARS (MV 鑑賞) | 01:01:45 |
